Update ntbs for new mlflow version, update gitignore

--- a/02-experiment-tracking/running-mlflow-examples/scenario-1.ipynb
+++ b/02-experiment-tracking/running-mlflow-examples/scenario-1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,20 +25,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tracking URI: 'file:///workspaces/mlops-zoomcamp/02-experiment-tracking/running-mlflow-examples/mlruns'\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"tracking URI: '{mlflow.get_tracking_uri()}'\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Experiment: artifact_location='file:///workspaces/mlops-zoomcamp/02-experiment-tracking/running-mlflow-examples/mlruns/0', creation_time=1718884084311, experiment_id='0', last_update_time=1718884084311, lifecycle_stage='active', name='Default', tags={}>]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "mlflow.list_experiments()"
+    "mlflow.search_experiments()"
    ]
   },
   {
@@ -50,9 +69,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024/06/20 11:48:15 INFO mlflow.tracking.fluent: Experiment with name 'my-experiment-1' does not exist. Creating a new experiment.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "default artifacts URI: 'file:///workspaces/mlops-zoomcamp/02-experiment-tracking/running-mlflow-examples/mlruns/353030545289691128/c992080bc2824e99b6b276b54d2abce1/artifacts'\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.datasets import load_iris\n",
@@ -77,11 +111,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<Experiment: artifact_location='file:///workspaces/mlops-zoomcamp/02-experiment-tracking/running-mlflow-examples/mlruns/353030545289691128', creation_time=1718884095079, experiment_id='353030545289691128', last_update_time=1718884095079, lifecycle_stage='active', name='my-experiment-1', tags={}>,\n",
+       " <Experiment: artifact_location='file:///workspaces/mlops-zoomcamp/02-experiment-tracking/running-mlflow-examples/mlruns/0', creation_time=1718884084311, experiment_id='0', last_update_time=1718884084311, lifecycle_stage='active', name='Default', tags={}>]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "mlflow.list_experiments()"
+    "mlflow.search_experiments()"
    ]
   },
   {
@@ -100,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,14 +158,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It's not possible to access the model registry :(\n"
+     ]
+    }
+   ],
    "source": [
     "from mlflow.exceptions import MlflowException\n",
     "\n",
     "try:\n",
-    "    client.list_registered_models()\n",
+    "    client.get_registered_model(\"name\")\n",
     "except MlflowException:\n",
     "    print(\"It's not possible to access the model registry :(\")"
    ]
@@ -151,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.19"
   },
   "orig_nbformat": 4
  },
